--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ main {
   <h2>Companies</h2>
   <div id="companyList"></div>
   <div style="margin-top:12px; font-size:13px; color:#cbd5f5;">
-    ✔ Select any to compare
+    ✔ Select to compare
   </div>
 </aside>
 
@@ -333,4 +333,5 @@ function removeFromCompare(index){
 
 </body>
 </html>
+
 
