--- a/org.html
+++ b/org.html
@@ -124,7 +124,7 @@
   <!-- لایه 3 -->
   <div class="layer layer-3" style="grid-template-columns: auto 8fr 2fr;">
     <div class="manager">CPO</div>
-    <div class="block">Product Development</div>
+    <div class="block">UX & Product Development</div>
     <div class="block">Product Support</div>
   </div>
 
@@ -160,3 +160,4 @@
 </div>
 </body>
 </html>
+
